--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Python
+      - name: Setup Python ${{ matrix.python }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
       - name: Install Dependencies
-        run: pip install tox pytest
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox
       - name: Run Tox
         run: tox -e py
